<resources>
    <string name="app_name">Adidas</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buy_tab_string">BUY</string>
    <string name="item_list_tab_string">ITEM LIST</string>
    <string name="placeholder_prod_name">Product Name</string>
    <string name="placeholder_price">29.99€</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="placeholder_date">04/07/2023</string>
    <string name="username_hint"><b>Username</b></string>
    <string name="password_hint_login">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="sign_in_label2">Sign In</string>
    <string name="sign_in_label1">Don\'t have an account?</string>
</resources>
