<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorBackground">

    <LinearLayout
        android:id="@+id/login_layout_main_lnlay"
        android:layout_width="@dimen/login_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/login_layout_logo_imgvw"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_camera_48pt_2x"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_username_txtietxt"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="48dp"
            android:textSize="@dimen/text_medium"
            android:hint="@string/username_hint"
            android:inputType="text"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_password_txtietxt"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/input_margin_top"
            android:layout_height="48dp"
            android:textSize="@dimen/text_medium"
            android:hint="@string/password_hint_login"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_layout_login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/input_margin_top"
            android:text="@string/login_button_label"
            android:textSize="@dimen/text_medium"/>
            <!--android:background="@drawable/round_black_button"/-->

        <TextView
            android:id="@+id/login_layout_problem_txtvw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:text=""
            android:textSize="@dimen/text_small"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout_signin_lnlay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal|bottom">

        <TextView
            android:id="@+id/login_layout_noaccount_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:text="@string/sign_in_label1"/>

        <TextView
            android:id="@+id/login_layout_signin_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in_label2"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>