<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_list_item_main_lnlay"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="96dp"
    android:backgroundTint="@color/colorBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/activity_main_list_item_product_pic_imgvw"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_weight="1.5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_camera_48pt_2x"
        />

    <LinearLayout
        android:id="@+id/activity_main_list_item_data_1_lnlay"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="6"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/activity_main_list_item_product_name_txtvw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:text="@string/placeholder_prod_name"
            android:textSize="24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="left|bottom"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/activity_main_list_item_price_txtvw"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/placeholder_price"/>

            <TextView
                android:id="@+id/activity_main_list_item_date_txtvw"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:textSize="16dp"
                android:text="@string/placeholder_date"/>
            
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

